<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="logo_netology">logo_Netology</string>
    <string name="menu">menu</string>
    <string name="buttonfavorite">buttonFavorite</string>
    <string name="sharebutton">shareButton</string>
    <string name="author">Нетология. Университет интернет-профессий будущего</string>
    <string name="published">21 мая в 18:36</string>
    <string name="content">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="remove">remove</string>
    <string name="post_content">Post content</string>
    <string name="post_content_is_empty">Post content is empty!</string>
    <string name="edit">Edit</string>
    <string name="chooser_share_post">Share</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="ok">ok</string>
    <string name="post_save">post_save</string>
    <string name="close_edit">close_edit</string>
    <string name="play_video">play video</string>
    <string name="no_app_to_open_video">no app to open video</string>
    <string name="invalid_video_url">invalid video url</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifiications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_shared">%1$s shared a post</string>
    <string name="empty_post">empty post</string>
    <string name="retry_loading">retry loading</string>
    <string name="error_loading">error loading</string>
    <string name="refresh">menu_refresh</string>
    <string name="error_network">No internet connection</string>
    <string name="error_server">Error on the server</string>
    <string name="error_timeout">Waiting time exceeded</string>
    <string name="retry_network">Check the connection</string>
    <string name="retry_later">Repeat later</string>
    <string name="full_screen_image">Полноэкранное изображение</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>

</resources>