<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/common_space"
    android:padding="@dimen/common_space"
    tools:context=".activity.MainActivity">


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/logo_netology"
        android:src="@drawable/ic_netology__1_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompact="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:text="@string/published"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

<!--color стоили для кнопок обязательны-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/ButtonMenu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:contentDescription="@string/menu"
        app:icon="@drawable/ic_52549_more_vert_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?colorControlNormal" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author,avatar,published" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:autoLink="all"
        android:text="@string/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        tools:text="@sample/posts.json/data/content" />

    <!-- style="@style/Widget.App.LikeCheckBox" ссылка на нaш style
     в папке values-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Like"
        style="@style/Widget.App.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:checkable="true"
        android:contentDescription="@string/buttonfavorite"
        app:icon="@drawable/ic_like_selector"
        tools:checked="true"
        tools:text="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Share"
        style="@style/ButtonShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/sharebutton"
        app:icon="@drawable/ic_share_selector"
        tools:text="30"
        app:layout_constraintStart_toEndOf="@id/Like"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:tint="?colorControlNormal" />

    <ImageView
        android:id="@+id/visibility"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="@dimen/common_space"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/menu"
        android:src="@drawable/visibility_fill__streamline_rounded_fill_material_symbols"
        app:layout_constraintEnd_toStartOf="@id/numberOfVisibility"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:tint="?colorControlNormal" />

    <TextView
        android:id="@+id/numberOfVisibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/common_space"
        android:text=""
        tools:text="33"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:tint="?colorControlNormal" />

    <FrameLayout
        android:id="@+id/videoContainer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/Share"
        android:visibility="gone"
        tools:visibility="visible">

        <!-- Заглушка-изображение (можно использовать любой drawable, например, ic_video_placeholder) -->
        <ImageView
            android:id="@+id/videoThumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_1" />

        <!-- Кнопка Play (можно использовать векторный drawable, например, ic_play_circle) -->
        <ImageView
            android:id="@+id/videoPlayButton"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:contentDescription="@string/play_video"
            android:src="@drawable/ic_slow_video_24"
            app:tint="@android:color/white" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>